--- a/hugo.toml
+++ b/hugo.toml
@@ -50,3 +50,52 @@ theme = 'mana'
   name = 'About'
   url = '/about/'
   weight = 40
+
+# Pagination Configuration
+# Configure how many posts to show per page
+# Default is 10 if not specified
+[pagination]
+  pageSize = 10  # Number of posts per page
+
+# Table of Contents (recommended)
+[markup]
+  [markup.tableOfContents]
+    startLevel = 1
+    endLevel = 6
+    ordered = false
+
+# Allow raw HTML within Markdown (for KaTeX, etc.)
+  [markup.goldmark]
+    [markup.goldmark.renderer]
+      unsafe = true
+    [markup.goldmark.parser]
+      # Enable block-level attributes for blockquotes and other block elements
+      # Required for blockquote render hooks (alerts/admonitions)
+      [markup.goldmark.parser.attribute]
+        block = true
+        title = true
+
+# Syntax highlighting configuration
+  [markup.highlight]
+    codeFences = true
+    guessSyntax = true
+    noClasses = false
+    style = "catppuccin-macchiato"  # Default style (will be overridden by theme-aware CSS)
+
+# Output formats for search index
+[outputs]
+  home = ["HTML", "JSON"]
+
+# Sitemap configuration for SEO
+[sitemap]
+  changefreq = "weekly"
+  priority = 0.5
+  filename = "sitemap.xml"
+
+# Admonitions Configuration
+[params.admonitions]
+    # Choose between "emoji" and "favicon" (image)
+    alertStyle = "favicon" 
+
+[taxonomies]
+  tag = "tags"
