--- a/hugo.toml
+++ b/hugo.toml
@@ -47,9 +47,15 @@ theme = 'mana'
   weight = 30
 
 [[menus.main]]
+  name = 'Projects'
+  url = '/projects/'
+  weight = 40
+
+[[menus.main]]
   name = 'About'
   url = '/about/'
-  weight = 40
+  weight = 50
+
 
 # Pagination Configuration
 # Configure how many posts to show per page
